Addet to master

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 	<!-- === Header-banner === -->
 
-	<header class="header-banner"></header>
+	<header id="header-banner"></header>
 
 	<!-- === Newsletter === -->
 
@@ -101,6 +101,8 @@
 		</div>
 
 	</section>
+
+	<!-- === Leistungen_Bereich === -->
 
 </body>
 
