--- a/kontakt.html
+++ b/kontakt.html
@@ -72,7 +72,7 @@
 
 	<!-- === Header-banner === -->
 
-	<header class="header-banner-klein"></header>
+	<header id="header-banner-klein"></header>
 
 
 </body>
