--- a/impressum.html
+++ b/impressum.html
@@ -5,16 +5,13 @@
 	<meta charset="utf-8">
 	<meta name="viewport"
 	content="width=device-width,initial-scale=1.0">
-	<title>Leistungen</title>
+	<title>Kontakt</title>
 	<link rel="stylesheet" type="text/css" href="src/css/styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato|Raleway"
 	rel="stylesheet">
-
 </head>
 
 <body>
-
-	<!-- === Navigationsleiste == -->
 
 	<!-- Navigationsleiste -->
 
@@ -31,9 +28,9 @@
 
 					<ul>
 						<li><a href="index.html">Startseite</a></li>
-						<li class="active"><a href="leistungen.html">Leistungen</a></li>
+						<li><a href="leistungen.html">Leistungen</a></li>
 						<li><a href="kontakt.html">Kontakt</a></li>
-						<li><a href="impressum.html">Impressum</a></li>
+						<li class="active"><a href="impressum.html">Impressum</a></li>
 					</ul>
 
 				</div>
@@ -57,10 +54,10 @@
 						<div class="clearfix" id="mobile-nav-content">
 
 							<ul>
-								<li><a href="index.html">Startseite</a></li>
-								<li class="active"><a href="leistungen.html">Leistungen</a></li>
+								<li ><a href="index.html">Startseite</a></li>
+								<li><a href="leistungen.html">Leistungen</a></li>
 								<li><a href="kontakt.html">Kontakt</a></li>
-								<li><a href="impressum.html">Impressum</a></li>
+								<li class="active"><a href="impressum.html">Impressum</a></li>
 							</ul>
 
 						</div>
@@ -72,12 +69,9 @@
 		</div>
 
 	</nav>
-
 	<!-- === Header-banner === -->
 
 	<header id="header-banner-klein"></header>
-
-
 
 </body>
 
