--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>Startseite</title>
 	<link rel="stylesheet" type="text/css" href="src/css/styles.css">
-	<link href="https://fonts.googleapis.com/css?family=Lato|Raleway" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lato|Raleway"
+	  rel="stylesheet">
 </head>
 
 <body>
@@ -80,7 +81,7 @@
 			<div class="row">
 				<div class="col-4">
 
-					<p id="nb-werbetext"><span class="wichtiger-text">Melde dich jetzt für den Newsletter an und verpasse nichts mehr!</span> Wir schicken dir nur interessante Informationen.</p>
+					<p id="nb-werbetext"><span class="wichtiger-text">Melde dich jetzt für den Newsletter an und verpasse nichts mehr!</span>						Wir schicken dir nur interessante Informationen.</p>
 
 				</div>
 				<div class="col-2 clearfix">
@@ -88,7 +89,8 @@
 					<form id="nb-form" action="index.html" method="post">
 
 						<label class="screenreader" for="nb-email-input">E-Mail:</label>
-						<input id="nb-email-input" type="text" name="email" placeholder="Deine E-Mail Adresse" pattern="(?:[a-z0-9!#$%&'*+\/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+\/=?^_`{|}~-]+)*|'(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21\x23-\x5b\x5d-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])*')@(?:(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?|\[(?:(?:(2(5[0-5]|[0-4][0-9])|1[0-9][0-9]|[1-9]?[0-9]))\.){3}(?:(2(5[0-5]|[0-4][0-9])|1[0-9][0-9]|[1-9]?[0-9])|[a-z0-9-]*[a-z0-9]:(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21-\x5a\x53-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])+)\])"
+						<input id="nb-email-input" type="text" name="email"
+						  placeholder="Deine E-Mail Adresse" pattern="(?:[a-z0-9!#$%&'*+\/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+\/=?^_`{|}~-]+)*|'(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21\x23-\x5b\x5d-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])*')@(?:(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?|\[(?:(?:(2(5[0-5]|[0-4][0-9])|1[0-9][0-9]|[1-9]?[0-9]))\.){3}(?:(2(5[0-5]|[0-4][0-9])|1[0-9][0-9]|[1-9]?[0-9])|[a-z0-9-]*[a-z0-9]:(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21-\x5a\x53-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])+)\])"
 						  title="Gibt eine gültige E-Mail Adresse ein.">
 
 						<button class="btn-typ-1" id="nb-btn" type="submit">Jetzt anmelden!</button>
@@ -112,8 +114,16 @@
 					<!-- Intro-bereich  -->
 					<header class="intro-container">
 						<h1>Unsere Leistungen</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-							dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur
+							adipisicing elit, sed do eiusmod tempor
+							incididunt ut labore et dolore magna aliqua.
+							Ut enim ad minim veniam, quis nostrud exercitation
+							ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit
+							in voluptate velit esse cillum dolore eu
+							fugiat nulla pariatur. Excepteur sint occaecat
+							cupidatat non proident, sunt in culpa qui
+							officia deserunt mollit anim id est laborum.</p>
 					</header>
 				</div>
 			</div>
@@ -121,16 +131,32 @@
 				<div class="col-3">
 					<article class="leistungs-box">
 						<h2>Leistungen#1</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-							dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur
+							adipisicing elit, sed do eiusmod tempor
+							incididunt ut labore et dolore magna aliqua.
+							Ut enim ad minim veniam, quis nostrud exercitation
+							ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit
+							in voluptate velit esse cillum dolore eu
+							fugiat nulla pariatur. Excepteur sint occaecat
+							cupidatat non proident, sunt in culpa qui
+							officia deserunt mollit anim id est laborum.</p>
 						<a class="btn-typ-2 leistung-ansehen-btn" href="leistungen.html#leistungen1">Ansehen</a>
 					</article>
 				</div>
 				<div class="col-3">
 					<article class="leistungs-box">
 						<h2>Leistungen#2</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-							dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur
+							adipisicing elit, sed do eiusmod tempor
+							incididunt ut labore et dolore magna aliqua.
+							Ut enim ad minim veniam, quis nostrud exercitation
+							ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit
+							in voluptate velit esse cillum dolore eu
+							fugiat nulla pariatur. Excepteur sint occaecat
+							cupidatat non proident, sunt in culpa qui
+							officia deserunt mollit anim id est laborum.</p>
 						<a class="btn-typ-2 leistung-ansehen-btn" href="leistungen.html#leistungen2">Ansehen</a>
 					</article>
 				</div>
@@ -139,22 +165,72 @@
 				<div class="col-3">
 					<article class="leistungs-box">
 						<h2>Leistungen#3</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-							dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur
+							adipisicing elit, sed do eiusmod tempor
+							incididunt ut labore et dolore magna aliqua.
+							Ut enim ad minim veniam, quis nostrud exercitation
+							ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit
+							in voluptate velit esse cillum dolore eu
+							fugiat nulla pariatur. Excepteur sint occaecat
+							cupidatat non proident, sunt in culpa qui
+							officia deserunt mollit anim id est laborum.</p>
 						<a class="btn-typ-2 leistung-ansehen-btn" href="leistungen.html#leistungen3">Ansehen</a>
 					</article>
 				</div>
 				<div class="col-3">
 					<article class="leistungs-box">
 						<h2>Leistungen#4</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-							dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur
+							adipisicing elit, sed do eiusmod tempor
+							incididunt ut labore et dolore magna aliqua.
+							Ut enim ad minim veniam, quis nostrud exercitation
+							ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit
+							in voluptate velit esse cillum dolore eu
+							fugiat nulla pariatur. Excepteur sint occaecat
+							cupidatat non proident, sunt in culpa qui
+							officia deserunt mollit anim id est laborum.</p>
 						<a class="btn-typ-2 leistung-ansehen-btn" href="leistungen.html#leistungen4">Ansehen</a>
 					</article>
 				</div>
 			</div>
 		</div>
 
+	</section>
+
+	<!-- === Video Bereich ===  -->
+	<section id="video-bereich">
+		<div class="container">
+			<div class="row">
+				<div class="col-6">
+					<header class="intro-container">
+						<h1>Das sind wir</h1>
+						<p>Lorem ipsum dolor sit amet, consectetur
+							adipisicing elit, sed do eiusmod tempor
+							incididunt ut labore et dolore magna aliqua.
+							Ut enim ad minim veniam, quis nostrud exercitation
+							ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit
+							in voluptate velit esse cillum dolore eu
+							fugiat nulla pariatur. Excepteur sint occaecat
+							cupidatat non proident, sunt in culpa qui
+							officia deserunt mollit anim id est laborum.</p>
+					</header>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-6">
+					<video src="./src/movie/WEBDESIGN-made-simple-Trailer.mp4"
+					  controls>
+						<p>Das Video kann leider nicht wiedergegeben werden.
+						Du findest es unter:
+						<a href="">Hier klicken</a>
+					</p>
+					</video>
+				</div>
+			</div>
+		</div>
 	</section>
 
 </body>
