--- a/index.html
+++ b/index.html
@@ -233,6 +233,73 @@
 		</div>
 	</section>
 
+	<!-- === Service bereich ===  -->
+
+	<section id="service-bereich">
+
+		<div class="container">
+
+			<div class="row">
+				<div class="col-6">
+					<header class="intro-container">
+						<h1>Unsere Services</h1>
+						<p>Lorem ipsum dolor sit amet, consectetur
+							adipisicing elit, sed do eiusmod tempor
+							incididunt ut labore et dolore magna aliqua.
+							Ut enim ad minim veniam, quis nostrud exercitation
+							ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit
+							in voluptate velit esse cillum dolore eu
+							fugiat nulla pariatur. Excepteur sint occaecat
+							cupidatat non proident, sunt in culpa qui
+							officia deserunt mollit anim id est laborum.</p>
+					</header>
+				</div>
+			</div>
+
+			<div class="row">
+
+				<div class="col-2">
+					<article class="service-box">
+						<div class="service-icon"></div>
+						<h1>Günstige Angebote</h1>
+						<p>Lorem ipsum dolor sit amet, consectetur
+							adipisicing elit, sed do eiusmod tempor
+							incididunt ut labore et dolore magna aliqua.
+							Ut enim ad minim veniam.
+						</p>
+					</article>
+				</div>
+
+				<div class="col-2">
+					<article class="service-box">
+						<div class="service-icon"></div>
+						<h1>Schnelle Lieferung</h1>
+						<p>Lorem ipsum dolor sit amet, consectetur
+							adipisicing elit, sed do eiusmod tempor
+							incididunt ut labore et dolore magna aliqua.
+							Ut enim ad minim veniam.
+						</p>
+					</article>
+				</div>
+
+				<div class="col-2">
+					<article class="service-box">
+						<div class="service-icon"></div>
+						<h1>Modernes Design</h1>
+						<p>Lorem ipsum dolor sit amet, consectetur
+							adipisicing elit, sed do eiusmod tempor
+							incididunt ut labore et dolore magna aliqua.
+							Ut enim ad minim veniam.
+						</p>
+					</article>
+
+				</div>
+			</div>
+		</div>
+
+	</section>
+
 </body>
 
 </html>
