--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 
 				<div class="col-2">
 					<article class="service-box">
-						<div class="service-icon"></div>
+						<div class="service-icon" id="guenstig-icon"></div>
 						<h1>Günstige Angebote</h1>
 						<p>Lorem ipsum dolor sit amet, consectetur
 							adipisicing elit, sed do eiusmod tempor
@@ -273,7 +273,7 @@
 
 				<div class="col-2">
 					<article class="service-box">
-						<div class="service-icon"></div>
+						<div class="service-icon" id="schnell-icon"></div>
 						<h1>Schnelle Lieferung</h1>
 						<p>Lorem ipsum dolor sit amet, consectetur
 							adipisicing elit, sed do eiusmod tempor
@@ -285,7 +285,7 @@
 
 				<div class="col-2">
 					<article class="service-box">
-						<div class="service-icon"></div>
+						<div class="service-icon" id="modern-icon"></div>
 						<h1>Modernes Design</h1>
 						<p>Lorem ipsum dolor sit amet, consectetur
 							adipisicing elit, sed do eiusmod tempor
