--- a/index.html
+++ b/index.html
@@ -298,6 +298,88 @@
 			</div>
 		</div>
 
+		<!-- === Über uns bereich ===  -->
+
+	</section>
+
+	<section id="ueber-uns-bereich">
+
+		<div class="container">
+
+			<div class="row">
+				<div class="col-6">
+					<header class="intro-container">
+						<h1>Über uns</h1>
+					</header>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-6">
+					<article id="ueber-uns-container">
+						<p>Lorem ipsum dolor sit amet,
+							consectetur adipisicing
+							elit, sed do eiusmod tempor
+							incididunt ut labore et
+							dolore magna aliqua. Ut
+							enim ad minim veniam, quis
+							nostrud exercitation ullamco
+							laboris nisi ut aliquip
+							ex ea commodo consequat.
+							Duis aute irure dolor in
+							reprehenderit in voluptate
+							velit esse cillum dolore
+							eu fugiat nulla pariatur.
+							Excepteur sint occaecat
+							cupidatat non proident,
+							sunt in culpa qui officia
+							deserunt mollit anim id
+							est laborum.</p>
+
+						<p>Lorem ipsum dolor sit amet,
+							consectetur adipisicing
+							elit, sed do eiusmod tempor
+							incididunt ut labore et
+							dolore magna aliqua. Ut
+							enim ad minim veniam, quis
+							nostrud exercitation ullamco
+							laboris nisi ut aliquip
+							ex ea commodo consequat.
+							Duis aute irure dolor in
+							reprehenderit in voluptate
+							velit esse cillum dolore
+							eu fugiat nulla pariatur.
+							Excepteur sint occaecat
+							cupidatat non proident,
+							sunt in culpa qui officia
+							deserunt mollit anim id
+							est laborum.</p>
+
+						<p>Lorem ipsum dolor sit amet,
+							consectetur adipisicing
+							elit, sed do eiusmod tempor
+							incididunt ut labore et
+							dolore magna aliqua. Ut
+							enim ad minim veniam, quis
+							nostrud exercitation ullamco
+							laboris nisi ut aliquip
+							ex ea commodo consequat.
+							Duis aute irure dolor in
+							reprehenderit in voluptate
+							velit esse cillum dolore
+							eu fugiat nulla pariatur.
+							Excepteur sint occaecat
+							cupidatat non proident,
+							sunt in culpa qui officia
+							deserunt mollit anim id
+							est laborum.</p>
+						<img src="./src/img/webdesign-logo-vertical.png"
+						  alt="Firmen-logo">
+					</article>
+				</div>
+			</div>
+		</div>
+
+
 	</section>
 
 </body>
