--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
 
 	</section>
 
-	<section id="ueber-uns-bereich">
+	<section id="über-uns-bereich">
 
 		<div class="container">
 
@@ -387,7 +387,7 @@
 			</div>
 			<div class="row">
 				<div class="col-6">
-					<article id="ueber-uns-container">
+					<article id="über-uns-container">
 						<p>Lorem ipsum dolor sit amet,
 							consectetur adipisicing
 							elit, sed do eiusmod tempor
