--- a/impressum.html
+++ b/impressum.html
@@ -3,12 +3,12 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport"
-	content="width=device-width,initial-scale=1.0">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>Kontakt</title>
-	<link rel="stylesheet" type="text/css" href="src/css/styles.css">
+	<link rel="stylesheet" type="text/css"
+	  href="src/css/styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato|Raleway"
-	rel="stylesheet">
+	  rel="stylesheet">
 </head>
 
 <body>
@@ -54,7 +54,7 @@
 						<div class="clearfix" id="mobile-nav-content">
 
 							<ul>
-								<li ><a href="index.html">Startseite</a></li>
+								<li><a href="index.html">Startseite</a></li>
 								<li><a href="leistungen.html">Leistungen</a></li>
 								<li><a href="kontakt.html">Kontakt</a></li>
 								<li class="active"><a href="impressum.html">Impressum</a></li>
@@ -72,6 +72,23 @@
 	<!-- === Header-banner === -->
 
 	<header id="header-banner-klein"></header>
+
+	<!-- === Footer === -->
+
+	<footer id="footer">
+
+		<div class="container">
+			<div class="row">
+				<div class="col-6">
+					<span>WEBDESIGN-made-simple online Kurs</span>
+					<nav id="footer-nav">
+						<a href="impressum.html">Impressum</a>
+					</nav>
+				</div>
+			</div>
+		</div>
+
+	</footer>
 
 </body>
 
