--- a/index.html
+++ b/index.html
@@ -484,9 +484,24 @@
 				</div>
 			</div>
 		</div>
-
-
 	</section>
+
+	<!-- === Footer === -->
+
+	<footer id="footer">
+
+		<div class="container">
+			<div class="row">
+				<div class="col-6">
+					<span>WEBDESIGN-made-simple online Kurs</span>
+					<nav id="footer-nav">
+						<a href="impressum.html">Impressum</a>
+					</nav>
+				</div>
+			</div>
+		</div>
+
+	</footer>
 
 </body>
 
