--- a/leistungen.html
+++ b/leistungen.html
@@ -3,12 +3,12 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport"
-	content="width=device-width,initial-scale=1.0">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>Leistungen</title>
-	<link rel="stylesheet" type="text/css" href="src/css/styles.css">
+	<link rel="stylesheet" type="text/css"
+	  href="src/css/styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato|Raleway"
-	rel="stylesheet">
+	  rel="stylesheet">
 
 </head>
 
@@ -77,7 +77,22 @@
 
 	<header id="header-banner-klein"></header>
 
+	<!-- === Footer === -->
 
+	<footer id="footer">
+
+		<div class="container">
+			<div class="row">
+				<div class="col-6">
+					<span>WEBDESIGN-made-simple online Kurs</span>
+					<nav id="footer-nav">
+						<a href="impressum.html">Impressum</a>
+					</nav>
+				</div>
+			</div>
+		</div>
+
+	</footer>
 
 </body>
 
