--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 			</div>
 			<div class="row">
 				<div class="col-3">
-					<article class="leistungs-box">
+					<article class="leistung-teaser-box">
 						<h2>Leistungen#1</h2>
 						<p>Lorem ipsum dolor sit amet,
 							consectetur adipisicing
@@ -168,7 +168,7 @@
 					</article>
 				</div>
 				<div class="col-3">
-					<article class="leistungs-box">
+					<article class="leistung-teaser-box">
 						<h2>Leistungen#2</h2>
 						<p>Lorem ipsum dolor sit amet,
 							consectetur adipisicing
@@ -195,7 +195,7 @@
 			</div>
 			<div class="row">
 				<div class="col-3">
-					<article class="leistungs-box">
+					<article class="leistung-teaser-box">
 						<h2>Leistungen#3</h2>
 						<p>Lorem ipsum dolor sit amet,
 							consectetur adipisicing
@@ -220,7 +220,7 @@
 					</article>
 				</div>
 				<div class="col-3">
-					<article class="leistungs-box">
+					<article class="leistung-teaser-box">
 						<h2>Leistungen#4</h2>
 						<p>Lorem ipsum dolor sit amet,
 							consectetur adipisicing
