--- a/kontakt.html
+++ b/kontakt.html
@@ -74,6 +74,79 @@
 
 	<header id="header-banner-klein"></header>
 
+	<!-- === Kontakt-bereich ===  -->
+
+	<section id="kontakt-bereich">
+
+		<div class="container">
+			<div class="row">
+				<div class="col-6">
+					<!-- Intro-bereich  -->
+					<header class="intro-container">
+						<h1>Kontakt</h1>
+						<p>Lorem ipsum dolor sit amet,
+							consectetur adipisicing
+							elit, sed do eiusmod tempor
+							incididunt ut labore et
+							dolore magna aliqua. Ut
+							enim ad minim veniam, quis
+							nostrud exercitation ullamco
+							laboris nisi ut aliquip
+							ex ea commodo consequat.
+							Duis aute irure dolor in
+							reprehenderit in voluptate
+							velit esse cillum dolore
+							eu fugiat nulla pariatur.
+							Excepteur sint occaecat
+							cupidatat non proident,
+							sunt in culpa qui officia
+							deserunt mollit anim id
+							est laborum.</p>
+					</header>
+				</div>
+			</div>
+			<form id="kontakt-formular" action="kontakt.html"
+			  method="post">
+				<div class="row">
+					<div class="col-3">
+						<label for="vorname" class="screenreader">>Vorname:</label>
+						<input id="vorname" type="text"
+						  placeholder="Vorname" name="Vorname">
+					</div>
+					<div class="col-3">
+						<label for="nachname" class="screenreader">>Nachname:</label>
+						<input id="nachname" type="text"
+						  name="nachname" placeholder="Nachname">
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-6">
+						<label for="e-mail" class="screenreader">>E-mail:</label>
+						<input id="e-mail" type="text"
+						  name="e-mail" placeholder="E-mail"
+						  pattern="(?:[a-z0-9!#$%&'*+\/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+\/=?^_`{|}~-]+)*|'(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21\x23-\x5b\x5d-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])*')@(?:(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?|\[(?:(?:(2(5[0-5]|[0-4][0-9])|1[0-9][0-9]|[1-9]?[0-9]))\.){3}(?:(2(5[0-5]|[0-4][0-9])|1[0-9][0-9]|[1-9]?[0-9])|[a-z0-9-]*[a-z0-9]:(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21-\x5a\x53-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])+)\])"
+						  title="Gib eine gültige E-Mail Adresse ein!">
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-6">
+						<label for="nachricht"></label>
+						<textarea id="nachricht" name="name"
+						  rows="3" placeholder="Nachricht"></textarea>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-6">
+						<button class="btn-typ-3" type="submit"
+						  name="submitButton">
+							Senden
+						</button>
+					</div>
+				</div>
+		</div>
+		</form>
+	</section>
+
 	<!-- === Footer === -->
 
 	<footer id="footer">
