--- a/index.html
+++ b/index.html
@@ -109,7 +109,16 @@
 
 	</section>
 
+	<!-- === Logo === -->
+
+	<div class="animiertes-logo">
+		<img src="./src/img/webdesign-logo-klein.png"
+		  alt="Logo webdesign made simple">
+	</div>
+
 	<!-- === Leistungen_Bereich === -->
+
+
 
 
 	<section id="leistungen-bereich">
