--- a/kontakt.html
+++ b/kontakt.html
@@ -137,8 +137,8 @@
 				</div>
 				<div class="row">
 					<div class="col-6">
-						<button class="btn-typ-3" type="submit"
-						  name="submitButton">
+						<button id="absendenButton" class="btn-typ-3"
+						  type="submit" name="submitButton">
 							Senden
 						</button>
 					</div>
