changed movie src

--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
 				<div class="col-4">
 
 					<p id="nb-werbetext"><span class="wichtiger-text">Melde dich jetzt für den Newsletter an und verpasse nichts mehr!</span>						Wir schicken dir nur interessante
-						Informationen.</p>
+						Informationen.
+					</p>
 
 				</div>
 				<div class="col-2 clearfix">
@@ -312,7 +313,7 @@
 			</div>
 			<div class="row">
 				<div class="col-6">
-					<video src="./src/mov/WEBDESIGN made simple - Trailer.mp4"
+					<video src="./src/movie/WEBDESIGN made simple-Trailer.mp4"
 					  controls>
 							<p>
 								Das Video kann leider nicht wiedergegeben werden.
