changed video source

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 			</div>
 			<div class="row">
 				<div class="col-6">
-					<video src="./src/movie/WEBDESIGN made simple-Trailer.mp4"
+					<video src="./src/movie/WEBDESIGN-made-simple-Trailer.mp4"
 					  controls>
 							<p>
 								Das Video kann leider nicht wiedergegeben werden.
