changed style sheet href

--- a/impressum.html
+++ b/impressum.html
@@ -30,7 +30,7 @@
 
 	<!-- AUTOREN-STYLESHEET -->
 	<link rel="stylesheet" type="text/css"
-	  href="./src/css/styles.min.css">
+	  href="./src/css/styles.css">
 
 </head>
 
@@ -113,7 +113,8 @@
 					<p>
 						Max Mustermann<br /> WEBDESIGN
 						made simple<br /> Musterstra&szlig;e
-						111<br /> Geb&auml;ude 44<br
+						111
+						<br /> Geb&auml;ude 44<br
 						/> 90210 Musterstadt
 					</p>
 
@@ -327,7 +328,8 @@
 						<li>verwendetes Betriebssystem</li>
 						<li>Referrer URL</li>
 						<li>Hostname des zugreifenden
-							Rechners</li>
+							Rechners
+						</li>
 						<li>Uhrzeit der Serveranfrage</li>
 					</ul>
 
