--- a/leistungen.html
+++ b/leistungen.html
@@ -30,7 +30,7 @@
 
 	<!-- AUTOREN-STYLESHEET -->
 	<link rel="stylesheet" type="text/css"
-	  href="./src/css/styles.min.css">
+	  href="./src/css/styles.css">
 
 </head>
 
