--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-6">
-					<span>WEBDESIGN-made-simple online Kurs</span>
+					<span>Webdesign made simple by Oliver Brychcy im rahmen eines Online Kurses</span>
 					<nav id="footer-nav">
 						<a href="impressum.html">Impressum</a>
 					</nav>
