--- a/impressum.html
+++ b/impressum.html
@@ -358,7 +358,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-6">
-					<span>WEBDESIGN made simple by Ruben Winkler (2018)</span>
+					<span>Webdesign made simple by Oliver Brychcy im rahmen eines Online Kurses</span>
 					<nav id="footer-nav">
 						<a href="impressum.html">Impressum</a>
 					</nav>
