--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 			<div class="row">
 				<div class="col-6">
 					<header class="intro-container">
-						<h1>WEBDESIGNE made simple!</h1>
+						<h1>WEBDESIGN made simple!</h1>
 						<p>Lorem ipsum dolor sit amet,
 							consectetur adipisicing
 							elit, sed do eiusmod tempor
